Add Model Armor integration and sensitive data handling tools
- Implement Model Armor callback in agent.py for sensitive data interception
- Create setup_model_armor.py for template creation in Model Armor API
- Add sensitive_tool.py for handling sensitive data with appropriate responses
- Update dependencies in pyproject.toml and uv.lock for Model Armor
- Add launch.json for VS Code debugging configuration
- Enhance .gitignore for better environment management

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,5 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "google-adk>=1.8.0",
+    "google-cloud-modelarmor==0.2.6",
 ]
