Update .gitignore to include GEMINI.md and .python-version; remove agent.py file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Python .gitignore
 .vscode/*
 uv.lock
+GEMINI.md
+.python-version
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
